@@ -18,9 +18,13 @@ Music_wrapper_iterator::Music_wrapper_iterator ()
 Music_wrapper_iterator::Music_wrapper_iterator (Music_wrapper_iterator const &src)
   : Music_iterator (src)
 {
-  child_iter_ = (src.child_iter_) ? src.child_iter_->clone () : 0;
-  if (child_iter_)
+
+  child_iter_ = 0;
+  if  (src.child_iter_)
+  {
+    child_iter_ = src.child_iter_->clone () ;
     scm_gc_unprotect_object (child_iter_->self_scm());
+  }
 }
 
 void
